# konnect-cli

./: .env.copy  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/api/: api_product_version_spec.rs  api_product_versions.rs  api_products.rs  api_utils.rs  common_structs.rs  mod.rs
src/cli/: api_product_version_spec.rs  api_product_versions_cli.rs  api_products_cli.rs  cli_utils.rs  main_cli.rs  mod.rs
src/utils/: konnect_utils.rs  mod.rs
tests/: cli_test.rs
